...
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/subtitle"
            app:layout_constraintEnd_toStartOf="@id/check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="1 курс · 2 семестр" />

        <TextView android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="?attr/colorOnSurfaceVariant"
...
